--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,36 +12,36 @@
 <title>Charitify || NGO/Charity/Fundraising Template</title>
 <link rel="shortcut icon" type="image/x-icon" href="https://html.dynamiclayers.net/dl/charitify/img/favicon.png">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/font-awesome.min.css">
+<link rel="stylesheet" href="../../assets/css/font-awesome.min.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/themify-icons.css">
+<link rel="stylesheet" href="../../assets/css/themify-icons.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/elegant-font-icons.css">
+<link rel="stylesheet" href="../../assets/css/elegant-font-icons.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/elegant-line-icons.css">
+<link rel="stylesheet" href="../../assets/css/elegant-line-icons.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/bootstrap.min.css">
+<link rel="stylesheet" href="../../assets/css/bootstrap.min.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/venobox/venobox.css">
+<link rel="stylesheet" href="../../assets/css/venobox/venobox.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/owl.carousel.css">
+<link rel="stylesheet" href="../../assets/css/owl.carousel.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/slicknav.min.css">
+<link rel="stylesheet" href="../../assets/css/slicknav.min.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/css-animation.min.css">
+<link rel="stylesheet" href="../../assets/css/css-animation.min.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/nivo-slider.css">
+<link rel="stylesheet" href="../../assets/css/nivo-slider.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/main.css">
+<link rel="stylesheet" href="../../assets/css/main.css">
 
-<link rel="stylesheet" href="https://html.dynamiclayers.net/dl/charitify/css/responsive.css">
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+<link rel="stylesheet" href="../../assets/css/responsive.css">
+<script src="../../assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 <body>
 <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-<div class="site-preloader-wrap">
+<div class="">
 <div class="spinner"></div>
 </div>
 <header id="header" class="header-section">
@@ -75,37 +75,37 @@
 </div>
 </div>
 <div class="col-sm-8 text-right">
-<ul id="mainmenu" class="nav navbar-nav nav-menu">
-<li class="active"> <a href="index.html">Home</a>
-<ul>
-<li><a href="index.html">Home Default</a></li>
-<li><a href="index-2.html">Home Modern</a></li>
-</ul>
-</li>
-<li><a href="about.html">About</a></li>
-<li><a href="causes.html">Causes</a></li>
-<li><a href="event.html">Event</a></li>
-<li><a href="#">Pages</a>
-<ul>
-<li><a href="gallery.html">Gallery</a></li>
-<li><a href="team.html">Volunteers</a></li>
-<li><a href="404.html">404 Not Found</a></li>
-</ul>
-</li>
-<li><a href="blog-grid.html">Blog</a>
-<ul>
-<li><a href="blog-grid.html">Blog Grid</a></li>
-<li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
-<li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
-<li><a href="blog-list-classic.html">Classic List</a></li>
-<li><a href="blog-list-modern.html">Modern List</a></li>
-<li><a href="blog-single.html">Blog Single</a></li>
-</ul>
-</li>
-<li> <a href="contact.html">Contact</a></li>
-</ul>
-<a href="#" class="default-btn">Donet Now</a>
-</div>
+    <ul id="mainmenu" class="nav navbar-nav nav-menu">
+    <li class="active"> <a routerLink="">Home</a>
+    <!-- <ul>   `
+    <li><a routerLink="">Home Default</a></li>
+    <li><a href="index-2.html">Home Modern</a></li>
+    </ul> -->
+    </li>
+    <li><a routerLink="/about" style="color: #f8b864;">About Us</a></li>
+    <li><a routerLink="/services">Services</a></li>
+    <li><a routerLink="/activities">Activities</a></li>
+    <!-- <li><a href="#">Pages</a>
+    <ul>
+    <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="team.html">Volunteers</a></li>
+    <li><a href="404.html">404 Not Found</a></li>
+    </ul>
+    </li>
+    <li><a href="blog-grid.html">Blog</a>
+    <ul> -->
+    <!-- <li><a href="blog-grid.html">Blog Grid</a></li>
+    <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
+    <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
+    <li><a href="blog-list-classic.html">Classic List</a></li>
+    <li><a href="blog-list-modern.html">Modern List</a></li>
+    <li><a href="blog-single.html">Blog Single</a></li>
+    </ul>
+    </li> -->
+    <li> <a routerLink="/contact">Contact Us</a></li>
+    </ul>
+    <a href="#" class="default-btn">Donate Now</a>
+    </div>
 </div>
 </div>
 </div>
@@ -327,38 +327,38 @@
 </footer>
 <a data-scroll href="#header" id="scroll-to-top"><i class="arrow_up"></i></a>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery-1.12.4.min.js"></script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="../../assets/js/vendor/jquery-1.12.4.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/bootstrap.min.js"></script>
+<script src="../../assets/js/vendor/bootstrap.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/tether.min.js"></script>
+<script src="../../assets/js/vendor/tether.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/imagesloaded.pkgd.min.js"></script>
+<script src="../../assets/js/vendor/imagesloaded.pkgd.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/owl.carousel.min.js"></script>
+<script src="../../assets/js/vendor/owl.carousel.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.isotope.v3.0.2.js"></script>
+<script src="../../assets/js/vendor/jquery.isotope.v3.0.2.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/smooth-scroll.min.js"></script>
+<script src="../../assets/js/vendor/smooth-scroll.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/venobox.min.js"></script>
+<script src="../../assets/js/vendor/venobox.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.ajaxchimp.min.js"></script>
+<script src="../../assets/js/vendor/jquery.ajaxchimp.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.counterup.min.js"></script>
+<script src="../../assets/js/vendor/jquery.counterup.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.waypoints.v2.0.3.min.js"></script>
+<script src="../../assets/js/vendor/jquery.waypoints.v2.0.3.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.slicknav.min.js"></script>
+<script src="../../assets/js/vendor/jquery.slicknav.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/jquery.nivo.slider.pack.js"></script>
+<script src="../../assets/js/vendor/jquery.nivo.slider.pack.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/letteranimation.min.js"></script>
+<script src="../../assets/js/vendor/letteranimation.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/vendor/wow.min.js"></script>
+<script src="../../assets/js/vendor/wow.min.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/contact.js"></script>
+<script src="../../assets/js/contact.js"></script>
 
-<script src="https://html.dynamiclayers.net/dl/charitify/js/main.js"></script>
+<script src="../../assets/js/main.js"></script>
 </body>
 </html>
