Contact us information provided

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -127,19 +127,19 @@
 <div id="google_map"></div>
 <div class="container">
 <div class="row contact-wrap">
-<div class="col-md-6 xs-padding">
+<div class="col-md-7 xs-padding">
 <div class="contact-info">
 <h3>Get in touch</h3>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Main has survived not only five centuries.</p>
+<p>We are happy to be in touch with you. You can reach us with any one of the following options.</p>
+<!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Main has survived not only five centuries.</p> -->
 <ul>
-<li><i class="ti-location-pin"></i> 315 West 33rd Street New York, NY 10001</li>
-<li><i class="ti-mobile"></i> +1 212 425 8617, +1 212 425 8533</li>
-<li><i class="ti-email"></i> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="6930061c1b0c04080005290a0604190807100708040c470a0604">[email&#160;protected]</a></li>
+<li><i class="ti-location-pin"></i>Real Dream Trust, No 24, Vadivel Nagar, Behind COllectorate, Kancheepuram 631501.</li>
+<li><i class="ti-mobile"></i> +91 8754748250 +91 9629642789</li>
+<li><i class="ti-email"></i> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="6930061c1b0c04080005290a0604190807100708040c470a0604">realdreamtrust@gmail.com</a></li>
 </ul>
 </div>
 </div>
-<div class="col-md-6 xs-padding">
+<div class="col-md-5 xs-padding">
 <div class="contact-form">
 <h3>Drop us a line</h3>
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
