--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -110,13 +110,35 @@
 </div>
 </div>
 </header>
-<div class="header-height"></div>
+<div class="header-height" style="height: 128px;"></div>
 <section class="slider-section">
 <div class="slider-wrapper">
 <div id="main-slider" class="nivoSlider">
 <img src="https://html.dynamiclayers.net/dl/charitify/img/slider-1.jpg" alt="" title="#slider-caption-1" />
 <img src="https://html.dynamiclayers.net/dl/charitify/img/slider-2.jpg" alt="" title="#slider-caption-2" />
 <img src="https://html.dynamiclayers.net/dl/charitify/img/slider-3.jpg" alt="" title="#slider-caption-3" />
+<img class="nivo-main-image" src="https://html.dynamiclayers.net/dl/charitify/img/slider-3.jpg" style="display: inline; height: 568px; width: 1349px;">
+<div class="nivo-caption" style="display: block;">
+
+    <div class="display-table">
+    <div class="table-cell">
+    <div class="container">
+    <div class="slider-text">
+        <h5 class="wow cssanimation fadeInBottom  animated" style="visibility: visible; animation-name: bfadeInBottom;">Join Us Today</h5>
+        <h1 class="wow cssanimation leFadeInRight sequence animated animated" style="visibility: visible;"></h1>
+        <p class="wow cssanimation fadeInTop  animated" data-wow-delay="1s" style="visibility: visible; animation-delay: 1s; animation-name: bfadeInTop;">Help today because tomorrow you may be the one who needs helping! <br>Forget what you can get and see what you can give.</p>
+        <a href="#" class="default-btn wow cssanimation fadeInBottom  animated" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: bfadeInBottom;">Join With Us</a>
+        <a href="#" class="default-btn wow cssanimation fadeInBottom  animated" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: bfadeInBottom;">Donet Now</a>
+    </div>
+    
+</div>
+</div>
+</div>
+</div>
+<div class="nivo-directionNav">
+    <a class="nivo-prevNav">
+    <i class="ti-arrow-left"></i></a>
+    <a class="nivo-nextNav"><i class="ti-arrow-right"></i></a></div>
 </div>
 <div id="slider-caption-1" class="nivo-html-caption slider-caption">
 <div class="display-table">
@@ -650,7 +672,7 @@
 </div>
 </div>
 </footer>
-<a data-scroll href="#header" id="scroll-to-top"><i class="arrow_up"></i></a>
+<a data-scroll="" href="#header" id="scroll-to-top" style="display: block;"><i class="arrow_up"></i></a>
 
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="../../assets/js/vendor/jquery-1.12.4.min.js"></script>
 
